added showTask Function

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <button type="button" id="new-task">Add New Task</button>
             <div id="all-tasks"></div>
         </div>
-        <div id="task-form" class="hide">
+        <div id="task-div" class="hide">
             <div id="cancel">
                 <p id="x">X</p>
             </div>
-            <form action="">
+            <form action="" id="task-form">
                 <label for="title">Title</label>
                 <div>
                     <input type="text" name="title" id="title" required>
